Remove some json struct tag, still work fine
