# docs/swagger.json
@@ -68,11 +68,11 @@
         "auth.RegisterResponse": {
             "type": "object",
             "properties": {
-                "data": {
-                    "$ref": "#/definitions/auth.RegisterResponseData"
-                },
                 "er": {
                     "type": "string"
+                },
+                "ldata": {
+                    "$ref": "#/definitions/auth.RegisterResponseData"
                 },
                 "message": {
                     "type": "string"
